# 2026-QuEra-Creator

./: challenge.md
team_solutions/Team-Cook/: team_solutions.md
team_solutions/Team-Cook/media/Tex/: 3fbaa3506a7bee9b.tex  fb37ce0cde168de8.tex
team_solutions/Team-Cook/media/videos/main/480p15/partial_movie_files/SurfaceCodeShuttling/: partial_movie_file_list.txt
team_solutions/Team-Cook/quantum_visualizers/src/: main.py
team_solutions/team_solutions:Team-Cook/: README.md
team_solutions/team_solutions:Team-Cook/media/Tex/: baa5d058a985bc3d.tex
team_solutions/team_solutions:Team-Cook/media/videos/main/480p15/partial_movie_files/SurfaceCodeAnimation/: partial_movie_file_list.txt
team_solutions/team_solutions:Team-Cook/quantum_visualizers/src/: pyproject.toml
