[project]
name = "quantum-visualizers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.2",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "pycairo>=1.29.0",
    "quantum-animation-toolbox>=0.1.1",
    "scipy>=1.17.0",
    "setuptools>=80.10.2",
]
